deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orbitpulse
  namespace: dev
  labels:
    app: orbitpulse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orbitpulse
  template:
    metadata:
      labels:
        app: orbitpulse
    spec:
      containers:
      - name: orbitpulse
        image: nkdemoprojectacr09.azurecr.io/hello-aks:latest
        ports:
        - containerPort: 80
