service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbitpulse-svc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: orbitpulse
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
