ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orbitpulse-ingress
  annotations:    
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.demo.local
    secretName: tls-secret
  rules:
  - host: dev.demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orbitpulse-svc
            port:
              number: 443
